<resources>
    <string name="app_name">Min Utstyrsoversikt</string>

    <string name="action_assets">Utstyr</string>
    <string name="action_users">Brukere</string>
    <string name="action_loan">Utlån</string>
    <string name="action_settings">Innstillinger</string>
    <string name="action_login">Logg inn</string>
    <string name="action_logout">Logg ut</string>

    <string name="action_edit">Endre</string>
    <string name="action_delete">Slett</string>

    <string name="fragment_user_tvUserInfo">Brukerinformasjon</string>
    <string name="fragment_Equipment_tvEquipmentBrand">Merke</string>
    <string name="fragment_Equipment_tvEquipmentModel">Model</string>
    <string name="fragment_Equipment_tvEquipmentITNumber">IT-nummer</string>
    <string name="fragment_Equipment_tvEquipmentAquired">Anskaffet</string>
    <string name="fragment_Equipment_tvEquipmentDescription">Beskrivelse</string>
    <string name="fragment_Equipment_tvEquipmentStatus">Status</string>
    <string name="fragment_Equipment_tvEquipmentStatusIn">På lager</string>
    <string name="fragment_Equipment_tvEquipmentStatusOut">Utlånt</string>


    <string name="fragment_Equipment_tvEquipmentInfo">Utstyrsinformasjon</string>
    <string name="fragment_user_tvUserFullName">Fornavn Etternavn</string>
    <string name="fragment_user_tvUserUsername">Brukernavn</string>
    <string name="fragment_user_tvUserPhonenumber">+47 999 99 999</string>
    <string name="fragment_user_tvUserSMSMessage">Melding fra Min utstyrsoversikt: </string>

    <string name="fragment_user_ActivateSMS">Din bruker er nå aktiver i appen Min utstyrsoversikt.</string>

    <string name="fragment_Register_tvAddRegisterHeader_New">Ny bruker</string>
    <string name="fragment_Register_tvAddRegisterHeader_Edit">Rediger bruker</string>

    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nei</string>

    <string name="dialog_loan_Title">Registrer innlevering</string>
    <string name="dialog_loan_Message_out">Registrer innlevering for utstyr </string>

    <string name="dialog_deleteuser_Title">Slette bruker</string>
    <string name="dialog_deleteuser_Message_out">Er du sikker på at du vil slette brukeren</string>

    <string name="dialog_deleteequipment_Title">Slette utstyr</string>
    <string name="dialog_deleteequipment_Message_out">Er du sikker på at du vil slette utstyret</string>

    <string name="MENU_CONTEXT_LIST_SHOW">Vis</string>
    <string name="MENU_CONTEXT_LIST_EDIT">Rediger</string>
    <string name="MENU_CONTEXT_LIST_DELETE">Slett</string>

    <string name="MENU_BUTTON_SHOW_ASSETS">Utstyr</string>
    <string name="MENU_BUTTON_SHOW_USERS">Brukere</string>
    <string name="MENU_BUTTON_SHOW_HISTORY">Historie</string>
    <string name="MENU_BUTTON_SHOW_MY_PAGE">Min side</string>

    <string name="MENU_BUTTON_LOGIN">Logg inn</string>
    <string name="MENU_BUTTON_LOGOUT">Logg ut</string>

    <string name="MENU_BUTTON_ADD_EQUIPMENT">Legg til utstyr</string>
    <string name="MENU_BUTTON_NEW_USER">Opprett bruker</string>

    <string name="FILTER_CATEGORY_ALL">Kategorier</string>
    <string name="FILTER_EQUIPMENT_AVAILABLE">Tilgjengelig</string>
    <string name="FILTER_EQUIPMENT_INUSE">I bruk</string>

    <string name="FILTER_ALL_USERS">Alle brukere</string>
    <string name="FILTER_ACTIVE_USERS">Aktive brukere</string>
    <string name="FILTER_NOT_ACTIVE_USERS">Ikke aktive brukere</string>


    <string name="FILTER_EQUIPMENT_ALL">Alt utstyr</string>
    <string name="FILTER_EQUIPMENT_AVAILABLE_BYCATEGORY">Tilgjengelig</string>
    <string name="FILTER_EQUIPMENT_INUSE_BYCATEGORY">Utlånt</string>

    <string name="FILTER_HISTORY_ALL">All historie</string>
    <string name="FILTER_HISTORY_INUSE">Kun utlån</string>

    <string name="CLASS_CATEGORY_STATUS_IN">Lager</string>
    <string name="CLASS_CATEGORY_STATUS_OUT">Utlånt</string>

    <string name="CLASS_USER_STATUS_ACTIVATE">Aktivert</string>
    <string name="CLASS_USER_STATUS_DEACTIVATED">Deaktivert</string>

    <string name="CLASS_USERLOGENTRIES_EQUIPMENT">Utstyr</string>
    <string name="CLASS_USERLOGENTRIES_OUT">Utlånt</string>
    <string name="CLASS_USERLOGENTRIES_IN">Levert</string>

    <string name="DIALOG_FRAGMENT_LOAN_OUT_TITLE">Registrere lån</string>
    <string name="DIALOG_FRAGMENT_LOAN_OUT_MESSAGE">Vil du registrere et lån for bruker %1$s og utstyr %2$s?</string>

    <string name="FRAGMENT_LIST_TITLE_EQUIPMENT">Utstyr</string>
    <string name="FRAGMENT_LIST_TITLE_USERS">Brukere</string>
    <string name="FRAGMENT_LIST_TITLE_HISTORY">Historie</string>
    <string name="FRAGMENT_LIST_TITLE_CATEGORY">Kategori</string>
    <string name="FRAGMENT_LIST_NOTIFY_NOEQUIPMENT">Det finnes desverre ikke noe utstyr i denne kategorien.</string>

    <string name="WEB_API_ADD_EQUIPMENT_SUCCESS">Utstyr er lagret i databasen.</string>

    <string name="WEB_API_UPDATE_USER_SUCCESS">Oppdatering av bruker fullført.</string>
    <string name="WEB_API_UPDATE_USERPASSWORD_SUCCESS">Oppdatering av bruker passord fullført.</string>
    <string name="WEB_API_UPDATE_EQUIPMENT_SUCCESS">Oppdatering av utstyr fullført.</string>
    <string name="WEB_API_REGISTER_RESERVATION_OUT">Reservering av utstyr fullført.</string>
    <string name="WEB_API_REGISTER_RESERVATION_IN">Innlevering av utstyr fullført.</string>

    <string name="WEBAPI_CODE_200">Forespørsel OK. Ingen feilmelding.</string>
    <string name="WEBAPI_CODE_500">Generell database/server-feil. Mer info i message.</string>
    <string name="WEBAPI_CODE_512">Feil brukernavn og/eller passord evt. timeout.</string>
    <string name="WEBAPI_CODE_513">Kan ikke logge ut siden brukeren ikke er logget inn.</string>
    <string name="WEBAPI_CODE_514">Manglende parametre. Mer info i message.</string>
    <string name="WEBAPI_CODE_515">Duplikat data (eks. IT-nr). Mer info i message.</string>
    <string name="WEBAPI_CODE_516">Generell Exception. Mer info i message.</string>
    <string name="WEBAPI_CODE_517">Duplikat pålogging av admin. En annen admin er allerede logget inn.</string>
    <string name="WEBAPI_CODE_518">Denne operasjonen krever admin-rettigheter.</string>

    <string name="DEVICEAPI_SMS_SENT_RESULT_OK">Meldingen er sendt til bruker</string>
    <string name="DEVICEAPI_SMS_SENT_RESULT_ERROR_GENERIC_FAILURE">Melding ikke sendt på grunn av generisk feil.</string>
    <string name="DEVICEAPI_SMS_SENT_RESULT_ERROR_NO_SERVICE">Melding ikke sendt på grunn av at telefonen har ingen tjeneste.</string>
    <string name="DEVICEAPI_SMS_SENT_RESULT_ERROR_NULL_PDU">Null PDU</string>
    <string name="DEVICEAPI_SMS_SENT_RESULT_ERROR_RADIO_OFF">Melding ikke sendt på grunn av at telefonen ikke har slått på GSM.</string>
    <string name="DEVICEAPI_SMS_DELIVERED_RESULT_OK">Meldingen er levert.</string>
    <string name="DEVICEAPI_SMS_DELIVERED_RESULT_CANCELED">Meldingen er ikke levert.</string>


    <string name="WEBAPI_CODE_ERROR">Noe gikk galt.</string>
</resources>
