<LinearLayout
    tools:context="no.hin.student.myassetmanager.Fragments.FragmentAccountSettings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="7dp"
    android:layout_marginTop="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginBottom="7dp">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/laptop"
            android:contentDescription="hh"
            android:adjustViewBounds="true"
            android:maxHeight="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/ivEquipmentFragment"/>

        <TextView
            android:id="@+id/textViewEquipmentInfoLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fragment_Equipment_tvEquipmentInfo"
            android:textSize="22sp"
            android:textColor="#50A7B3"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivEquipmentFragment"
            android:layout_toEndOf="@+id/ivEquipmentFragment"/>

        <TextView
            android:id="@+id/textViewEquipmentBrand"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fragment_Equipment_tvEquipmentBrand"
            android:textSize="16sp"
            android:textColor="#696969"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textViewEquipmentInfoLabel"
            android:layout_toRightOf="@+id/ivEquipmentFragment"
            android:layout_toEndOf="@+id/ivEquipmentFragment"/>

        <TextView
            android:id="@+id/textViewEquipmentModel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fragment_Equipment_tvEquipmentModel"
            android:textSize="16sp"
            android:textColor="#6D6D6D"
            android:layout_below="@+id/textViewEquipmentBrand"
            android:layout_toRightOf="@+id/ivEquipmentFragment"
            android:layout_toEndOf="@+id/ivEquipmentFragment"/>

        <TextView
            android:id="@+id/textViewEquipmentITNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fragment_Equipment_tvEquipmentITNumber"
            android:textSize="16sp"
            android:textColor="#6D6D6D"
            android:layout_below="@+id/textViewEquipmentModel"
            android:layout_toRightOf="@+id/ivEquipmentFragment"
            android:layout_toEndOf="@+id/ivEquipmentFragment"/>

        <TextView
            android:id="@+id/textViewEquipmentAquired"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fragment_Equipment_tvEquipmentAquired"
            android:textSize="16sp"
            android:textColor="#6D6D6D"
            android:layout_below="@+id/textViewEquipmentITNumber"
            android:layout_toRightOf="@+id/ivEquipmentFragment"
            android:layout_toEndOf="@+id/ivEquipmentFragment"/>

        <TextView
            android:id="@+id/textViewEquipmentDescription"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fragment_Equipment_tvEquipmentDescription"
            android:textSize="16sp"
            android:textColor="#6D6D6D"
            android:layout_below="@+id/textViewEquipmentAquired"
            android:layout_toRightOf="@+id/ivEquipmentFragment"
            android:layout_toEndOf="@+id/ivEquipmentFragment"/>

        <TextView
            android:id="@+id/textViewEquipmentStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fragment_Equipment_tvEquipmentStatus"
            android:textSize="16sp"
            android:textColor="#6D6D6D"
            android:layout_below="@+id/textViewEquipmentDescription"
            android:layout_toRightOf="@+id/ivEquipmentFragment"
            android:layout_toEndOf="@+id/ivEquipmentFragment"/>
    </RelativeLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#728C93"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:id="@+id/rlActions"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vwLine1">
        <ImageButton
            android:id="@+id/btnEquipmentLoan"
            android:src="@drawable/equipment_out"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/btnEquipmentPicture"
            android:src="@drawable/equipment_picture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/btnEquipmentEdit"
            android:src="@drawable/equipment_edit"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/btnEquipmentDelete"
            android:src="@drawable/equipment_delete"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>
    </LinearLayout>


    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#728C93"
        android:layout_marginTop="5dp"/>
</LinearLayout>